--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
     <title>Image Only</title>
 </head>
 <body>
-    <img src="image.jpg" alt="Description of Image">
+    <img src="IMG_20250205_144115_540.jpg" alt="Description of Image">
 </body>
 </html>
